logs/collective.googlesystemstorage.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/googleauthentication'...
Listing './lib/python3.5/site-packages/collective/googleauthentication/browser'...
Listing './lib/python3.5/site-packages/collective/googleauthentication/profiles'...
Listing './lib/python3.5/site-packages/collective/googleauthentication/profiles/default'...
Listing './lib/python3.5/site-packages/collective/googleauthentication/skins'...
Listing './lib/python3.5/site-packages/collective/googleauthentication/skins/google_authentication'...
Listing './lib/python3.5/site-packages/collective/googlesystemstorage'...
Compiling './lib/python3.5/site-packages/collective/googlesystemstorage/GoogleSystemStorage.py'...
***   File "./lib/python3.5/site-packages/collective/googlesystemstorage/GoogleSystemStorage.py", line 271
    raise AttributeError, 'Unknown attribute: %s' % cmd_name
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective.googleauthentication-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/collective.googlesystemstorage-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/iw'...
Listing './lib/python3.5/site-packages/iw/fss'...
Listing './lib/python3.5/site-packages/iw/fss/Extensions'...
Compiling './lib/python3.5/site-packages/iw/fss/Extensions/migrationExample.py'...
***   File "./lib/python3.5/site-packages/iw/fss/Extensions/migrationExample.py", line 49
    raise ValueError, "install and configure FileSystemStorage first!"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iw/fss/FileSystemStorage.py'...
***   File "./lib/python3.5/site-packages/iw/fss/FileSystemStorage.py", line 280
    raise AttributeError, 'Unknown attribute: %s' % cmd_name
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iw/fss/bin'...
Compiling './lib/python3.5/site-packages/iw/fss/bin/build_fs_tree.py'...
***   File "./lib/python3.5/site-packages/iw/fss/bin/build_fs_tree.py", line 46
    print MAN
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/iw/fss/bin/strategymigrator.py'...
***   File "./lib/python3.5/site-packages/iw/fss/bin/strategymigrator.py", line 233
    print "Error: SOURCEPATH and DESTINATIONPATH are required arguments."
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/iw/fss/browser'...
Listing './lib/python3.5/site-packages/iw/fss/configuration'...
Compiling './lib/python3.5/site-packages/iw/fss/configuration/datatypes.py'...
***   File "./lib/python3.5/site-packages/iw/fss/configuration/datatypes.py", line 69
    raise ValueError, "Zope process user cannot read+write in %s." % value
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iw/fss/configuration/schema.py'...
***   File "./lib/python3.5/site-packages/iw/fss/configuration/schema.py", line 53
    raise RuntimeError, 'Schema already loaded'
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iw/fss/doc'...
Listing './lib/python3.5/site-packages/iw/fss/doctests'...
Listing './lib/python3.5/site-packages/iw/fss/etc'...
Listing './lib/python3.5/site-packages/iw/fss/examples'...
Listing './lib/python3.5/site-packages/iw/fss/i18n'...
Listing './lib/python3.5/site-packages/iw/fss/locales'...
Listing './lib/python3.5/site-packages/iw/fss/locales/cs'...
Listing './lib/python3.5/site-packages/iw/fss/locales/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/iw/fss/locales/fr'...
Listing './lib/python3.5/site-packages/iw/fss/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/iw/fss/locales/pt_BR'...
Listing './lib/python3.5/site-packages/iw/fss/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/iw/fss/profiles'...
Listing './lib/python3.5/site-packages/iw/fss/profiles/default'...
Listing './lib/python3.5/site-packages/iw/fss/profiles/testfixture'...
Listing './lib/python3.5/site-packages/iw/fss/profiles/testfixture/types'...
Compiling './lib/python3.5/site-packages/iw/fss/strategy.py'...
***   File "./lib/python3.5/site-packages/iw/fss/strategy.py", line 58
    raise ValueError, "Path %s should be a part of %s" % (root_path, path)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iw/fss/tests'...
Compiling './lib/python3.5/site-packages/iw/fss/tests/base.py'...
***   File "./lib/python3.5/site-packages/iw/fss/tests/base.py", line 82
    print messageText
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/iw/fss/tests/data'...
Compiling './lib/python3.5/site-packages/iw/fss/tests/testFSS.py'...
***   File "./lib/python3.5/site-packages/iw/fss/tests/testFSS.py", line 801
    exec code in module.__dict__
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/iw/fss/zmi'...
Listing './lib/python3.5/site-packages/iw.fss-2.7.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
